# rustcat

./: .clippy.toml  .gitignore  Cargo.toml  DESIGN.md  README.md  SECURITY_CHECKLIST.md  SECURITY_IMPLEMENTATION.md  SECURITY_INFRASTRUCTURE.md  build.command  build_and_run.command  clippy.toml  code_quality_improvement_plan.md  pre-push-security-check.sh  run.command  rust-toolchain.toml  security_testing_plan.md  test_github_action.sh  test_linux_clippy.sh
.cargo/: clippy.toml  config.toml
.github/workflows/: linux.yml  macos.yml  security_tests.yml
benches/: memory_benchmark.rs
docs/: WATCHPOINTS.md
examples/: watchpoint_demo  watchpoint_demo.c
examples/watchpoint_demo.dSYM/Contents/: Info.plist
examples/watchpoint_demo.dSYM/Contents/Resources/DWARF/: watchpoint_demo
examples/watchpoint_demo.dSYM/Contents/Resources/Relocations/aarch64/: watchpoint_demo.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: command_fuzz.rs  dwarf_fuzz.rs  memory_fuzz.rs  symbol_fuzz.rs
scripts/: prd.txt
src/: lib.rs  main.rs
src/debugger/: breakpoint.rs  core.rs  disasm.rs  dwarf.rs  dwarf_controller.rs  macho_parser.rs  memory.rs  mod.rs  registers.rs  symbols.rs  threads.rs  tracer.rs  variables.rs
src/platform/: dwarf.rs  macos.rs  mod.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs  views.rs
src/tui/views/: code.rs  command.rs  memory.rs  mod.rs  stack.rs  threads.rs
tasks/: task_001.txt  task_002.txt  tasks.json
tests/: lib.rs
tests/binaries/: test_program  test_program.c
tests/binaries/test_program.dSYM/Contents/Resources/DWARF/: test_program
tests/binaries/test_program.dSYM/Contents/Resources/Relocations/aarch64/: test_program.yml
tests/input/: command_parser_test.rs  mod.rs
tests/integration/: mod.rs
tests/memory/: memory_bounds_test.rs  mod.rs
tests/platform/: mod.rs
tests/process/: mod.rs
