[package]
name = "rustcat"
version = "0.1.0"
edition = "2021"
description = "A MacOS-Only, Rust-Based, Fast-as-Hell Native Debugger"
authors = ["geeknik"]
license = "MIT"
repository = "https://github.com/geeknik/rustcat"
keywords = ["debugger", "macos", "terminal", "tui", "arm64"]
categories = ["development-tools", "command-line-utilities", "debugging", "visualization"]

[dependencies]
# UI/TUI dependencies
ratatui = { version = "0.23.0", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.27.0", default-features = false }

# Pin specific versions to resolve dependency conflicts
mio = "=0.8.11"
windows-sys = "=0.52.0" 
windows-targets = "=0.52.6"

# Parsing libraries
gimli = "0.31.1"
object = "0.36.7"
goblin = "0.9.3"
libc = "0.2.172"
cpp_demangle = "0.4.3"

# Async runtime and utilities
tokio = { version = "1.29.0", features = ["full"] }
futures = "0.3.28"
async-trait = "0.1.68"

# Error handling and utilities
thiserror = "1.0.41"
anyhow = "1.0.72"
log = "0.4.19"
env_logger = "0.10.0"
byteorder = "1.4.3"
regex = "1.11.1"
chrono = { version = "0.4.41", default-features = false, features = ["std", "clock"] }

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4.1"

[dev-dependencies]
# Testing frameworks
proptest = "1.4.0"       # Property testing
test-case = "3.3.1"      # Parameterized tests
mockall = "0.12.1"       # Mocking framework
criterion = "0.5.1"      # Benchmarking
grcov = "0.8.19"         # Coverage reporting
cargo-llvm-cov = "0.5.39" # LLVM coverage

[features]
default = ["debug_symbols"]
debug_symbols = []
macho = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Strip symbols from binary
opt-level = 3

[profile.dev]
debug = true
opt-level = 0

# Benchmark configuration
[[bench]]
name = "memory_benchmark"
harness = false

# Add Clippy allows at crate root
[lints.clippy]
multiple_crate_versions = "allow"
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
uninlined_format_args = "allow"
significant_drop_tightening = "allow"
cognitive_complexity = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
option_if_let_else = "allow"
match_on_vec_items = "allow"
manual_let_else = "allow"
match_same_arms = "allow"
used_underscore_binding = "allow"
cast_sign_loss = "allow"
needless_pass_by_value = "allow"
items_after_statements = "allow"
branches_sharing_code = "allow"
equatable_if_let = "allow"
